--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Team 4 Website</title>
     
-    <link> 
+    <link rel="stylesheet" src="css/designer.css">
+    <link rel="stylesheet" src="css/developer.css">
+    <script src="script.js"></script> 
    
   </head>
   <body>
