--- a/index.html
+++ b/index.html
@@ -8,8 +8,20 @@
     <script src="script.js"></script> 
    
   </head>
-  <body>
+  <body>    
+    
+    <div class="nav-wrapper">
+        <nav>
+            <ul>
+                <li><a href="#" class="nav-link"></a></li>
+                <li><a href="#" class="nav-link"></a></li>
+                <li><a href="#" class="nav-link"></a></li>
+                <li><a href="#" class="nav-link"></a></li>
+                <li><a href="#" class="nav-link"></a></li>
+            </ul>
+        </nav>
+    </div>
   
   </body>
   
-  </html
+  </html>
