--- a/index.html
+++ b/index.html
@@ -13,20 +13,31 @@
   </head>
   <body>    
     
-    <div class="nav-wrapper">
-        <nav>
+    <nav>
+        <div class="nav-wrapper">
+        
 
+            <div class="hamburger-menu">
             <!--Referenced from W3Schools-->
-
-            <div class="dropdown">
-                <button onclick="navButton()" class="dropbtn"><i class="fa-solid fa-bars"></i></i></button>
-                <div id="myDropdown" class="dropdown-content">
-                  <a href="#">Link 1</a>
-                  <a href="#">Link 2</a>
-                  <a href="#">Link 3</a>
+                <div class="dropdown">
+                    <button onclick="navButton()" class="dropbtn"><i class="fa-solid fa-bars fa-2x"></i></i></button>
+                    <div id="myDropdown" class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                    </div>
                 </div>
-              </div>
-        </nav>
+
+            </div>
+
+                <div class="center">
+                <h1 class="main-title">Text Title Here</h1>
+                </div>
+
+                <div>
+                <i class="fa-solid fa-font-awesome fa-4x"></i>
+                </div>
+    </nav>
     </div>
   
   </body>
