--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
 
                 <div>
-                <i class="fa-solid fa-font-awesome fa-4x"></i>
+                  <i class="fa-sharp fa-solid fa-location-dot"></i>
                 </div>
     </nav>
     </div>
