--- a/index.html
+++ b/index.html
@@ -34,8 +34,17 @@
                 <h1 class="main-title">Text Title Here</h1>
                 </div>
 
-                <div>
-                  <i class="fa-sharp fa-solid fa-location-dot"></i>
+                <div class="contact">
+                  <i class="fa-sharp fa-solid fa-location-dot fa-3x"></i>
+
+                  <p>68200 Overseas Hwy, Layton, FL 33001
+                    <br>
+                    Open ⋅ Closes 5 PM
+                    <br>
+                    (305) 664-2238
+
+
+                  </p>
                 </div>
     </nav>
     </div>
