Changing some stuff with the contact info and drop down menu

--- a/index.html
+++ b/index.html
@@ -34,17 +34,16 @@
                 <h1 class="main-title">Text Title Here</h1>
                 </div>
 
-                <div class="contact">
-                  <i class="fa-sharp fa-solid fa-location-dot fa-3x"></i>
+                <div class="contact-nav">
+                    <i class="fa-sharp fa-solid fa-location-dot fa-3x"></i>
 
-                  <p>68200 Overseas Hwy, Layton, FL 33001
-                    <br>
-                    Open ⋅ Closes 5 PM
-                    <br>
-                    (305) 664-2238
+                      <p>68200 Overseas Hwy, Layton, FL 33001
+                        <br>
+                        Open ⋅ Closes 5PM
+                        <br>
+                        (305) 664-2238
+                      </p>
 
-
-                  </p>
                 </div>
     </nav>
     </div>
