Changing up some stuff

--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Team 4 Website</title>
+    <title>Pier 68 Boat Rental - Home</title>
     
     <link rel="stylesheet" href="css/designer.css">
     <link rel="stylesheet" href="css/developer.css">
     <script src="js/script.js"></script> 
     <script src="js/designer.js"></script> 
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter&family=Lato:wght@700&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/f05a0611e6.js" crossorigin="anonymous"></script>
    
@@ -31,11 +36,12 @@
             </div>
 
                 <div class="center">
-                <h1 class="main-title">Text Title Here</h1>
+                <h1 class="main-title">Pier 68 Boat Rental</h1>
                 </div>
 
                 <div class="contact-nav">
-                    <i class="fa-sharp fa-solid fa-location-dot fa-3x"></i>
+
+                  <i class="fa-sharp fa-solid fa-location-dot fa-3x"></i>
 
                       <p>68200 Overseas Hwy, Layton, FL 33001
                         <br>
@@ -43,8 +49,7 @@
                         <br>
                         (305) 664-2238
                       </p>
-
-                </div>
+                    
     </nav>
     </div>
   
