Mockup stuff mostly + Footer

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Lato:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
+
 
     <script src="https://kit.fontawesome.com/f05a0611e6.js" crossorigin="anonymous"></script>
    
@@ -28,9 +30,10 @@
                       <div class="dropdown">
                           <button onclick="navButton()" class="dropbtn"><i class="fa-solid fa-bars fa-2x"></i></i></button>
                           <div id="myDropdown" class="dropdown-content">
-                          <a href="#">Link 1</a>
-                          <a href="#">Link 2</a>
-                          <a href="#">Link 3</a>
+                          <a href="index.html">Home</a>
+                          <a href="#">About</a>
+                          <a href="#">Rentals</a>
+                          <a href="#">Contact Us</a>
                           </div>
                       </div>
 
@@ -71,7 +74,9 @@
    </main>
 
    <footer>
-    
+
+    <a href="mockup.html">Mockup Page</a>
+
    </footer>
 
 
