--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                   <div class="hamburger-menu">
                   <!--Referenced from W3Schools-->
                       <div class="dropdown">
-                          <button onclick="navButton()" class="dropbtn"><i class="fa-solid fa-bars fa-2x"></i></i></button>
+                          <button onclick="navButton()" class="dropbtn"><i onclick="navButton()" class="fa-solid fa-bars fa-2x"></i></button>
                           <div id="myDropdown" class="dropdown-content">
                           <a href="index.html">Home</a>
                           <a href="#">About</a>
