--- a/mockup.html
+++ b/mockup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Pier 68 Boat Rental - Home</title>
+        <title>MockUp Website for Pier </title>
         
         <link rel="stylesheet" href="css/designer.css">
         <link rel="stylesheet" href="css/developer.css">
