--- a/index.html
+++ b/index.html
@@ -58,7 +58,17 @@
     </div>
 
     <header>
-      <div class="slideshow-wrapper">
+      <video width="320" height="240" autoplay muted>
+        <source src="Media/boating-in-the-jupiter-florida-inlet-on-the-loxaha-2022-12-07-04-26-22-utc.mp4      " type="video/mp4">
+        <source src="Media/boating-in-the-jupiter-florida-inlet-on-the-loxaha-2022-12-07-04-26-22-utc.ogg" type="video/ogg">
+      Your browser does not support the video tag.
+      </video>
+    </header>
+
+
+   <section>
+
+    <div class="slideshow-wrapper">
       <!-- Code from w3schools -->
       
         <div class="slideshow-container">
@@ -116,11 +126,7 @@
           <span class="dot" onclick="currentSlide(6)"></span>
         </div>
       </div>  
-    </header>
 
-
-   <section>
-    
    </section>
   
    <main>
