--- a/index.html
+++ b/index.html
@@ -133,18 +133,20 @@
    </section>
   
    <main>
-      <div class="first-boat">
-        <img src="#">
+      <div class="boat">
+        <div class="img-wrapper">
+          <img src="images/boats/19_deep_v_polar_side.jpg">
+        </div>
         <p>Our $750/week 22' Boston Whaler is the perfect rental boat to get around the waters of Marathon while you are here. Whether you want to do some light inshore fishing, snorkel the local reef, or cruise around at sunset, this boat is all-around fun. It's one of only two at that price in our fleet of Marathon Boat Rentals, so it's in high demand. Reserve this affordable boat today for your Florida Keys vacation.</p>
       </div>
 
-      <div class="second-boat">
-        <img src="#">
+      <div class="boat">
+        <img src="images/boats/deckboat2.jpg">
         <p>A visit to the Florida Keys often includes some diving, and here in Marathon, we have some great dive spots. Our 26' Boston Whaler is the perfect choice for large parties of divers. This boat is equipped with a dive-door and a swim ladder to make getting in and out of the water with your gear easy. Many of our Marathon boat rentals have a dive door, but this boat's size and twin motors cater to the larger dive groups among you.</p>
       </div>
 
-      <div class="third-boat">
-        <img src="#">
+      <div class="boat">
+        <img src="images/boats/fishing_boat.jpg">
         <p>Just one of many of our Marathon boat rentals equipped for fishing, this particular boat is perfectly set up for the offshore. With outriggers for trolling for dolphin, plenty of rod holders, and a freshwater live well, this boat is ready for action! Of course we have twin motor boats available for fishing the Marathon humps and more, but this rental boat with a single 225 hp motor will get you there economically.</p>
       </div>
     
