--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   </div>
 
                   <div class="center">
-                    <h1 class="main-title">Pier 68 Boat Rental</h1>
+                    <img class="main-title" src="images/Pier68-Sign.png">
                   </div>
 
               
