--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
 
     <header>
-      <video width="600" height="440" controls muted>
+      <video width="800" height="640" controls>
         <source src="Media/boating-in-the-jupiter-florida-inlet-on-the-loxaha-2022-12-07-04-26-22-utc.mp4      " type="video/mp4">
         <source src="Media/boating-in-the-jupiter-florida-inlet-on-the-loxaha-2022-12-07-04-26-22-utc.ogg" type="video/ogg">
       Your browser does not support the video tag.
