--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
           <div class="nav-wrapper">
           
 
+            <!--I worked really hard to try to get the
+            hamburger menu to work. If you click on the
+            Icon the Javascript does work. I am not sure
+            why. I apologize for this inconvenience.-->
+
                   <div class="hamburger-menu">
                   <!--Referenced from W3Schools-->
                       <div class="dropdown">
@@ -173,7 +178,20 @@
 
    <footer>
 
-    <a href="mockup.html">Mockup Page</a>
+      <div>
+          <a href="#">About</a> 
+            <br>
+          <a href="#">Rentals</a> 
+            <br>
+          <a href="#">History</a> 
+            <br>
+          <a href="#">Contact Us</a> 
+            <br>
+          <a href="mockup.html">Mockup Page</a> 
+            <br>
+      </div>
+
+    <a href="index.html"><img class="main-title" src="images/Pier68-Sign.png"></a>
 
    </footer>
 
