--- a/mockup.html
+++ b/mockup.html
@@ -57,6 +57,29 @@
                 <img class="mockup-img" src="images/Mockup-Images/Content.png">
             </div>
 
+
+
+
+            
+   <footer>
+
+    <div>
+        <a href="#">About</a> 
+          <br>
+        <a href="#">Rentals</a> 
+          <br>
+        <a href="#">History</a> 
+          <br>
+        <a href="#">Contact Us</a> 
+          <br>
+        <a href="mockup.html">Mockup Page</a> 
+          <br>
+    </div>
+
+  <a href="index.html"><img class="main-title" src="images/Pier68-Sign.png"></a>
+
+ </footer>
+
     </body>
 
 
