--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>Pier 68 Boat Rental - Home</title>
 
+    <link rel="icon" type="image/png" href="images/Pier68-Sign-68.png"/>
+
     <meta charset="UTF-8">
     <meta name="description" content="Free Web tutorials">
     <meta name="keywords" content="HTML, CSS, JavaScript">
@@ -33,8 +35,9 @@
 
             <!--I worked really hard to try to get the
             hamburger menu to work. If you click on the
-            Icon the Javascript does work. I am not sure
-            why. I apologize for this inconvenience.-->
+            Icon the Javascript does work. It only works
+            when you click the background button. I am not 
+            sure why. I apologize for this inconvenience.-->
 
                   <div class="hamburger-menu">
                   <!--Referenced from W3Schools-->
