--- a/mockup.html
+++ b/mockup.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>MockUp Website for Pier </title>
+
+        <link rel="icon" type="image/png" href="images/Pier68-Sign-68.png"/>
+
         
         <link rel="stylesheet" href="css/designer.css">
         <link rel="stylesheet" href="css/developer.css">
